chore: endpoints wip
